rough pcb placement done

--- a/.gitignore
+++ b/.gitignore
@@ -14,11 +14,13 @@
 *.sch-bak
 *~
 _autosave-*
+*auto_saved_files*
 *.tmp
 *-save.pro
 *-save.kicad_pcb
 fp-info-cache
 *-backups
+*.lck
 /build
 
 # Netlist files (exported from Eeschema)
