[verilog] add flake and basic setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# direnv
+.direnv
+
+# verilog builds
+.build
+
+#
+# Kicad ignores
+#
 # Adapted from:
 # https://github.com/github/gitignore/blob/master/KiCad.gitignore
 
