--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,25 @@
 .build
 
 #
+# icecube2
+#
+# from:
+# https://github.com/npetersen2/iCE40_Template/blob/master/.gitignore
+#
+.vdbs
+*.log
+*.log.bak
+*.tcl
+*.twr
+*_prim.v
+*.arearep
+xxx_lse_cp_file_list
+xxx_lse_sign_file
+*.prd
+*.rpt
+*_Implmnt
+
+#
 # Kicad ignores
 #
 # Adapted from:
