[vga] add vga top for 3 color pattern

--- a/examples/vga/proj/vga/vga_sbt.project
+++ b/examples/vga/proj/vga/vga_sbt.project
@@ -4,7 +4,7 @@ Version=Lattice Semiconductor Corporation iCEcube - Release: 2020.12.27943 - Bui
 ProjectName=vga
 Vendor=SiliconBlue
 Synthesis=synplify
-ProjectVFiles=../../src/vga_top.v,../../../common/pll_vga.v
+ProjectVFiles=../../src/vga_top.v,../../../common/pll_vga.v,../../src/pixel_addr.v,../../src/vga.v,../../src/vga_test_01.v,../../../common/counter.v
 ProjectCFiles=
 CurImplementation=vga_Implmnt
 Implementations=vga_Implmnt
