[test] don't need to strip top

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -6,7 +6,7 @@ BUILD_DIR = .build
 COMMON_SRC = $(wildcard common/*.v)
 
 # VGA sources
-VGA_SRC = $(filter-out %_top.v, $(wildcard vga/src/*.v))
+VGA_SRC = $(wildcard vga/src/*.v)
 
 # All sources
 SRC = $(COMMON_SRC) $(VGA_SRC)
