[uart] add tb - but still broken

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -8,13 +8,16 @@ COMMON_SRC = $(wildcard common/*.v)
 # VGA sources
 VGA_SRC = $(wildcard vga/src/*.v)
 
+# UART sources
+VGA_SRC = $(wildcard uart/src/*.v)
+
 # All sources
-SRC = $(COMMON_SRC) $(VGA_SRC)
+SRC = $(COMMON_SRC) $(VGA_SRC) $(UART_SRC)
 TB_COMMON_SRC = $(filter-out %_tb.v, $(wildcard $(TEST_DIR)/*.v))
 ALL_SRC = $(SRC) $(TB_COMMON_SRC)
 
 # Test benches
-TEST_BENCHES = counter_tb pixel_addr_tb vga_tb vga_test_01_tb
+TEST_BENCHES = counter_tb pixel_addr_tb vga_tb vga_test_01_tb uart_hello_tb
 
 # Output executables
 OUTS = $(patsubst %, $(BUILD_DIR)/%, $(TEST_BENCHES))
