--- a/lattice_proj/uart_hello/uart_hello_sbt.project
+++ b/lattice_proj/uart_hello/uart_hello_sbt.project
@@ -4,8 +4,8 @@ Version=Lattice Semiconductor Corporation iCEcube - Release: 2020.12.27943 - Bui
 ProjectName=uart_hello
 Vendor=SiliconBlue
 Synthesis=synplify
-ProjectVFiles=../../src/uart_hello_top.v=work,../../../common/uart_tx.v=work
-ProjectCFiles=
+ProjectVFiles=../../examples/uart/uart_hello_top.v=work,../../examples/lib/uart_tx.v=work
+ProjectCFiles=../../constraints/vanilla-ice40-clock.sdc
 CurImplementation=uart_hello_Implmnt
 Implementations=uart_hello_Implmnt
 StartFromSynthesis=yes
@@ -71,8 +71,8 @@ DesignView=_rt
 DesignCell=uart_hello_top
 SynthesisSDCFile=uart_hello_Implmnt/uart_hello.scf
 UserPinConstraintFile=
-UserSDCFile=../../../../constraints/vanilla-ice40-clock.sdc
-PhysicalConstraintFile=../../../../constraints/vanilla-ice40.pcf
+UserSDCFile=../../constraints/vanilla-ice40-clock.sdc
+PhysicalConstraintFile=../../constraints/vanilla-ice40.pcf
 BackendImplPathName=
 Devicevoltage=1.14
 DevicevoltagePerformance=+/-5%(datasheet default)
