--- a/lattice_proj/vga/vga_sbt.project
+++ b/lattice_proj/vga/vga_sbt.project
@@ -4,8 +4,8 @@ Version=Lattice Semiconductor Corporation iCEcube - Release: 2020.12.27943 - Bui
 ProjectName=vga
 Vendor=SiliconBlue
 Synthesis=synplify
-ProjectVFiles=../../src/vga_top.v=work,../../../common/pll_vga.v=work,../../src/pixel_addr.v=work,../../src/vga.v=work,../../src/vga_test_01.v=work,../../../common/counter.v=work
-ProjectCFiles=
+ProjectVFiles=../../examples/vga/pixel_addr.v,../../examples/vga/vga.v,../../examples/vga/vga_test_01.v,../../examples/vga/vga_top.v,../../examples/lib/counter.v,../../examples/lib/pll_vga.v
+ProjectCFiles=../../constraints/vanilla-ice40-clock.sdc
 CurImplementation=vga_Implmnt
 Implementations=vga_Implmnt
 StartFromSynthesis=yes
@@ -71,8 +71,8 @@ DesignView=_rt
 DesignCell=vga_top
 SynthesisSDCFile=vga_Implmnt/vga.scf
 UserPinConstraintFile=
-UserSDCFile=../../../../constraints/vanilla-ice40-clock.sdc
-PhysicalConstraintFile=../../../../constraints/vanilla-ice40.pcf
+UserSDCFile=../../constraints/vanilla-ice40-clock.sdc
+PhysicalConstraintFile=../../constraints/vanilla-ice40.pcf
 BackendImplPathName=
 Devicevoltage=1.14
 DevicevoltagePerformance=+/-5%(datasheet default)
