[lattice] ignore intermediate .prj files

--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,10 @@
 #
 # icecube2
 #
-# from:
+# modified from:
 # https://github.com/npetersen2/iCE40_Template/blob/master/.gitignore
 #
+*.prj
 .vdbs
 *.log
 *.log.bak
