--- a/lattice_proj/uart_hello_fifo/uart_hello_fifo_sbt.project
+++ b/lattice_proj/uart_hello_fifo/uart_hello_fifo_sbt.project
@@ -71,8 +71,8 @@ DesignView=_rt
 DesignCell=uart_hello_fifo_top
 SynthesisSDCFile=uart_hello_fifo_Implmnt/uart_hello_fifo.scf
 UserPinConstraintFile=
-UserSDCFile=
-PhysicalConstraintFile=
+UserSDCFile=../../constraints/vanilla-ice40-clock.sdc
+PhysicalConstraintFile=../../constraints/vanilla-ice40.pcf
 BackendImplPathName=
 Devicevoltage=1.14
 DevicevoltagePerformance=+/-5%(datasheet default)
