[sram] rm addr_gen, use iter

--- a/lattice_proj/sram_tester/sram_tester_sbt.project
+++ b/lattice_proj/sram_tester/sram_tester_sbt.project
@@ -4,7 +4,7 @@ Version=Lattice Semiconductor Corporation iCEcube - Release: 2020.12.27943 - Bui
 ProjectName=sram_tester
 Vendor=SiliconBlue
 Synthesis=synplify
-ProjectVFiles=../../examples/sram_test/address_generator.v,../../examples/sram_test/pattern_generator.v,../../examples/sram_test/result_checker.v,../../examples/sram_test/sram_tester.v,../../examples/sram_test/sram_tester_top.v,../../examples/sram_test/test_controller.v,../../examples/lib/sram_controller.v,../../examples/lib/bit_reverser.v
+ProjectVFiles=../../examples/sram_test/pattern_generator.v,../../examples/sram_test/result_checker.v,../../examples/sram_test/sram_tester.v,../../examples/sram_test/sram_tester_top.v,../../examples/sram_test/test_controller.v,../../examples/lib/sram_controller.v,../../examples/lib/bit_reverser.v,../../examples/lib/iter.v,../../examples/lib/counter.v
 ProjectCFiles=../../constraints/vanilla-ice40-clock.sdc
 CurImplementation=sram_tester_Implmnt
 Implementations=sram_tester_Implmnt
