[lattice] add project files back
These contain Synplify config and are not always
regenerated by icecube2. We need them for setting
options like the include path.

--- a/lattice_proj/vga/vga_sbt.project
+++ b/lattice_proj/vga/vga_sbt.project
@@ -4,7 +4,7 @@ Version=Lattice Semiconductor Corporation iCEcube - Release: 2020.12.27943 - Bui
 ProjectName=vga
 Vendor=SiliconBlue
 Synthesis=synplify
-ProjectVFiles=../../examples/vga/pixel_addr.v,../../examples/vga/vga.v,../../examples/vga/vga_test_01.v,../../examples/vga/vga_top.v,../../examples/lib/counter.v,../../examples/lib/pll_vga.v
+ProjectVFiles=../../examples/vga/vga_test_01.v,../../examples/vga/vga_top.v,../../examples/lib/counter.v,../../examples/lib/directives.v
 ProjectCFiles=../../constraints/vanilla-ice40-clock.sdc
 CurImplementation=vga_Implmnt
 Implementations=vga_Implmnt
@@ -56,7 +56,7 @@ BitmapSetSecurity=no
 BitmapSetNoUsedIONoPullup=no
 FloorPlannerShowFanInNets=yes
 FloorPlannerShowFanOutNets=yes
-HookTo3rdPartyTextEditor=
+HookTo3rdPartyTextEditor=no
 
 [vga_Implmnt]
 DeviceFamily=iCE40
@@ -66,9 +66,9 @@ DevicePower=
 NetlistFile=vga_Implmnt/vga.edf
 AdditionalEDIFFile=
 IPEDIFFile=
-DesignLib=vga_Implmnt/sbt/netlist/oadb-vga_top
-DesignView=_rt
-DesignCell=vga_top
+DesignLib=
+DesignView=
+DesignCell=
 SynthesisSDCFile=vga_Implmnt/vga.scf
 UserPinConstraintFile=
 UserSDCFile=../../constraints/vanilla-ice40-clock.sdc
