[direnv] gtk tuning

--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,7 @@
 use flake
-export GDK_DPI_SCALE=2
+
+export GTK_THEME="Adwaita"
+
+if grep -q Microsoft /proc/version; then
+  export GDK_DPI_SCALE=2
+fi
