--- a/.envrc
+++ b/.envrc
@@ -1,6 +1,7 @@
 use flake
 
 export GTK_THEME="Adwaita"
+export MAKEFLAGS="-j8"
 
 if grep -q Microsoft /proc/version; then
   export GDK_DPI_SCALE=2
